@@ -7,6 +7,7 @@ apt (0.9.8.3) UNRELEASED; urgency=low
     (Closes: 645713)
   * prefer Essentials over Removals in ordering score
   * fix priority sorting by prefering higher in MarkInstall
+  * try all providers in order if uninstallable in MarkInstall
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 09 Jun 2013 15:06:24 +0200
 
